--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -5,6 +5,8 @@
 /** Colors **/
 $primary-text-color : #FFFFFF; //White
 $secondary-text-color : #FF0C64; //Pink
+$admin-bck-color : #4E4466;
+$dark-color: #0F0F0F;
 
 
 /** Fonts **/
