--- a/public/css/app.css
+++ b/public/css/app.css
@@ -63,6 +63,18 @@ p {
   text-shadow: 2px 2px 5px grey;
 }
 
+.admin-container {
+  font-family: "Roboto Slab", serif;
+}
+
+.admin-nav h2 {
+  color: #FF0C64;
+}
+
+.admin-nav a {
+  color: #FFFFFF;
+}
+
 /** Header **/
 
 header {
@@ -74,6 +86,14 @@ header {
 footer {
   background-image: url("/assets/img/desktop/bck_footer_desktop.png");
   background-color: black;
+}
+
+.admin-container {
+  background-color: #4E4466;
+}
+
+.sidebar {
+  background-color: #0F0F0F;
 }
 
 /**
@@ -126,6 +146,34 @@ footer div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+/** Admin (studio) **/
+
+.admin-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.admin-container .sidebar {
+  text-align: center;
+  width: 15em;
+}
+
+.admin-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  width: inherit;
+}
+
+.admin-nav a {
+  width: auto;
 }
 
 /**
