--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -7,6 +7,9 @@ $primary-text-color : #FFFFFF; //White
 $secondary-text-color : #FF0C64; //Pink
 $admin-bck-color : #4E4466;
 $dark-color: #0F0F0F;
+$success-color: #5bbf5b;
+$danger-color: #e65e5e;
+$info-color: #479fe5;
 
 
 /** Fonts **/
