--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -16,6 +16,7 @@ $info-color: #479fe5;
 $regular-font : 'Lato', sans-serif;
 $handwrite-font : 'Caveat', cursive;
 $title-font :  'Roboto Slab', serif;
+$preview-font: 'Permanent Marker', cursive;
 
 
 
