--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -18,6 +18,9 @@
 //font-family: 'Lato', sans-serif;
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700,900');
 
+//font-family: 'Permanent Marker', cursive;
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker');
+
 /*******
 **
 *******/
